[package]
name = "cytui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
image = "0.25"
imageproc = "0.25"
ratatui = "0.29"
viuer = { version = "0.11", features = ["icy_sixel"] }
ndarray = "0.17"
ndarray-stats = "0.7"
noisy_float = "0.2"
